set upload icon size upfront to prevent jumping when it loads

--- a/app/src/app/pages/project-details/sections/dashboard/upload-card/upload-card.component.css
+++ b/app/src/app/pages/project-details/sections/dashboard/upload-card/upload-card.component.css
@@ -23,6 +23,7 @@
 .upload-card--body--icon {
 	font-size: 56px;
 	min-width: 56px;
+	min-height: 56px;
 	margin-right: 6px;
 	color: var(--primary-contrast);
 }
